CSS: Stats: Fix map preview overflowing container element.

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1579,10 +1579,14 @@ span[class^="flag-"] {
     width: 100%;
 }
 
+.map-wrapper {
+    height: 80vh;
+    overflow: hidden;
+}
+
 .map {
     background: hsl(84, 68%, 23%);
-    box-shadow: 0px 0px 0px 1px hsl(23deg 55% 24%), 0px 0px 0px 2px hsl(23deg 47% 36%), 2px 2px 4px hsl(0deg 0% 0% / 50%);
-    height: 481px;
+     box-shadow: 0px 0px 0px 1px hsl(23deg 55% 24%), 0px 0px 0px 2px hsl(23deg 47% 36%), 2px 2px 4px hsl(0deg 0% 0% / 50%); 
     touch-action: none;
     user-select: none;
 }
